# bcc

./: CLAUDE.md  Cargo.toml  case_implementation_guide.md  debug_test.bcc  error_test.bcc  error_test2.bcc  feature_demo.bcc  few_test.bcc  ignore_test.bcc  implementation_summary.md  kwargs_implementation_guide.md  multi_assignment_demo.bcc  multi_return_implementation_guide.md  multi_test.bcc  multi_test2.bcc  simple_test.bcc  single_test.bcc  test.bcc  test_brace.bcc  test_dict_mixed.bcc  test_divmod.bcc  test_empty_parens.bcc  test_features.bcc  test_if_else.bcc  test_plus_minus.bcc  test_temp.txt  test_verification.md  tuple_test.bcc
.claude/: settings.local.json
.claude/agents/: rust-compiler-architect.md
docs/: README.md  architecture-overview.md  compilers-for-dummies.md  creating-built-in-functions.md  evaluator-deep-dive.md  lexer-deep-dive.md  parser-deep-dive.md
src/: ast.rs  error.rs  evaluator.rs  lexer.rs  lib.rs  main.rs  parser.rs  repl.rs  runner.rs  value.rs
tests/: integration_tests.rs
